--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md LICENSE
-recursive-exclude test 
+recursive-exclude osgeo_importer/static/osgeo_importer/test * 
 recursive-include osgeo_importer *.js *.css *.png *.html *.json
