--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md LICENSE
-exclude osgeo_importer/static/osgeo_importer/test
+recursive-exclude osgeo_importer test *migration*
 recursive-include osgeo_importer *.js *.css *.png *.html *.json
